--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -20,6 +20,9 @@ docker_builder:
     - go test -p 1 ./...
   env:
     HOME: /root
+    GRPC_GO_LOG_SEVERITY_LEVEL: info
+    GRPC_GO_LOG_VERBOSITY_LEVEL: 2
+    GODEBUG: http2debug=1
 
 task:
   name: Release
